--- a/API.csproj
+++ b/API.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>GridEx.API</AssemblyName>
     <RootNamespace>GridEx.API</RootNamespace>
     <Platforms>AnyCPU;x64</Platforms>
