GridEx.API.Requests&GridEx.API.Responses->GridEx.API.Trading.Requests&GridEx.API.Trading.Responses

--- a/src/API.csproj
+++ b/src/API.csproj
@@ -27,4 +27,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Trading\" />
+  </ItemGroup>
+
 </Project>
